# Rusty-C-binaries

02-Primitives/01-integer/integer_bin/: Cargo.toml
02-Primitives/02-tuple-i32/tuple_02/: Cargo.toml
02-Primitives/05-tuple-boolean/tuple_boolean/: Cargo.toml
02-Primitives/06-Primitives/char_c/: Cargo.toml
02-Primitives/06-Primitives/float_f/: Cargo.toml
02-Primitives/06-Primitives/inte_i/: Cargo.toml
02-Primitives/06-Primitives/inte_u/: Cargo.toml
03-entry-profiles/01-01-Primitives/entry-dev-03/: Cargo.toml
03-entry-profiles/01-01-Primitives/entry-dev-05/: Cargo.toml
03-entry-profiles/01-01-Primitives/entry-strip-01/: Cargo.toml
03-entry-profiles/01-01-Primitives/entry-test/: Cargo.toml
C/02-functions/: concat  concat.bc  concat.c  concat.ll  concat02  concat02.bc  concat02.c  concat02.ll
C/03-simple/: si-09  simple  simple-stripped  simple-stripped-02  simple-stripped-03  simple-stripped-07  simple-stripped-08
C/04-Hello/: hello-01  hello-02  hello-03  hello-04  hello-05  hello.c
LLVM/: hello  hello2  hello3  hello4
LLVM/if-else-byte/: test.bc  test.c  test.ll
Rust/01-Hello-World/: hello.c  hello2
Rust/06-no-std/: README.md
Rust/09-Hello-World-stripped/rust-hello/: Cargo.toml
Rust/10-Hello-World-unstripped/: comparison-unstripped.md
Rust/11-Un-Stripped-Comparison/: de-  de-obj-t-unstripped-v4.txt  de-obj-t-unstripped.txt  de-objdump-rust-stripped.txt  de-objdump-rust-unstripped.txt  obj-t-stripped.txt  obj-t-unstripped.txt  objdump-rust-unstripped.txt  rust-hello-stripped-v2  rust-unstripped-v3  strings_stripped.txt
(+129 files in other folders)
